[feat] OpenApi 원하는 데이터 가져오기 #2